+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.5.3?
===========================

*Release date: 1X-Dec-2008*


Build
-----

- In the OSX installer, update SQLite to 3.6.7, and change bsddb URL.

What's New in Python 2.5.3c1?
=============================

*Release date: 13-Dec-2008*

Core and builtins
-----------------

- Issue #1706039: Support continued reading from a file even after 
  EOF was hit.

- Issue #1683: prevent forking from interfering in threading storage.

- Issue #4597: Fixed several opcodes that weren't always propagating
  exceptions.

- Issue #4589: Propagated an exception thrown by a context manager's
  __exit__ method's result while it's being converted to bool.

- Issue #4317: Fixed a crash in the imageop.rgb2rgb8() function.

- Issue #4230: If ``__getattr__`` is a descriptor, it now functions correctly.

- Issue #4048: The parser module now correctly validates relative imports.

- Issue #4176: Fixed a crash when pickling an object which ``__reduce__``
  method does not return iterators for the 4th and 5th items.

- Issue #3967: Fixed a crash in the count() and find() methods of string-like
  objects, when the "start" parameter is a huge value.

- Issue #3936: The parser warnings for using "as" and "with" as variable names
  didn't fire after import statements.

- Issue #3751: str.rpartition would perform a left-partition when called with
  a unicode argument.

- Issue #3537: Fix an assertion failure when an empty but presized dict
  object was stored in the freelist.

- Apply security patches from Apple.

- Issue #2620: Overflow checking when allocating or reallocating memory
  was not always being done properly in some python types and extension
  modules.  PyMem_MALLOC, PyMem_REALLOC, PyMem_NEW and PyMem_RESIZE have
  all been updated to perform better checks and places in the code that